--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -654,6 +654,7 @@ ul {
 @media only screen and (max-width: 600px) {
     #tetris-body {
         height: fit-content!important;
+        touch-action: manipulation;
     }
     .tetris-footer{
         display: none;
