--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -811,6 +811,84 @@ ul {
     .mobile_button {
         display:inline-block;
     }
+
+    .connect4 {
+        padding-bottom: 12vh;
+        align-items: center;
+        display: inline-table;
+    }
+    
+    .connect4>ul {
+        border: 1px solid #333;
+        background-color: rgba(7, 8, 88, 0.9);
+        /* background-color: rgba(30, 30, 30, 0.9); */
+        width: 350px;
+        margin: 0 auto;
+    }
+    
+    .connect4>ul>li {
+        width: 100%;
+        height: 50px;
+        padding: 0;
+    }
+    
+    .connect4>ul>li>ul {
+        display: flex;
+    }
+    
+    .connect4>ul>li>ul>li {
+        width: 45px;
+        height: 45px;
+        margin: 2.5px;
+        border-radius: 50%;
+        background-color: rgba(187, 187, 187,0.3);
+        /* border-bottom: rgba(29, 29, 29, 0.15) solid 0.8px;
+        border-top: rgba(29, 29, 29, 0.15) solid 0.8px;
+        border-right: rgba(29, 29, 29, 0.15) solid 0.8px; */
+    }
+    
+    .player1 {
+        background: linear-gradient(20deg, red, 25%, rgba(255, 133, 133, 0.945));
+     
+        /* background-color: rgba(255, 133, 133, 0.945)!important; */
+    }
+    
+    .player2 {
+        background: linear-gradient(20deg, rgb(208, 255, 0), 25%, rgba(255, 255, 137, 0.884));;
+        /* background-color: rgba(255, 255, 97, 0.884)!important; */
+    }
+    
+    
+    #player {
+        padding:0;
+        text-align: center;
+        padding-top: 10vh;
+        padding-bottom: 6vh;
+        margin: 0;
+        font-size: 36px;
+        color: #CCC;
+        font-weight: 900;
+    }
+    
+    .pick_line {
+        align-items: center;
+    }
+    
+    .pick_line>ul {
+        border: 1px solid #333;
+        background-color: rgba(3, 4, 71, 0.9);
+        width: 350px;
+        margin: 0 auto;
+        display:flex;
+    }
+    .pick_line>ul>li {
+        width: 45px;
+        margin: 2.5px;
+        height: 45px;
+        border-radius: 50%;
+        background-color: rgba(187, 187, 187, 0.1);
+        padding: 0;
+    }
 }
 
 #scan-button {
@@ -930,7 +1008,7 @@ video {
     font-size: 4vw;
 
 }
-
+/* connect4 game */
 .connect4 {
     padding-bottom: 12vh;
     align-items: center;
@@ -941,13 +1019,13 @@ video {
     border: 1px solid #333;
     background-color: rgba(7, 8, 88, 0.9);
     /* background-color: rgba(30, 30, 30, 0.9); */
-    width: 350px;
+    width: 455px;
     margin: 0 auto;
 }
 
 .connect4>ul>li {
     width: 100%;
-    height: 50px;
+    height: 65px;
     padding: 0;
 }
 
@@ -956,8 +1034,8 @@ video {
 }
 
 .connect4>ul>li>ul>li {
-    width: 45px;
-    height: 45px;
+    width: 60px;
+    height: 60px;
     margin: 2.5px;
     border-radius: 50%;
     background-color: rgba(187, 187, 187,0.3);
@@ -998,14 +1076,14 @@ video {
 .pick_line>ul {
     border: 1px solid #333;
     background-color: rgba(3, 4, 71, 0.9);
-    width: 350px;
+    width: 455px;
     margin: 0 auto;
     display:flex;
 }
 .pick_line>ul>li {
-    width: 45px;
+    width: 60px;
     margin: 2.5px;
-    height: 45px;
+    height: 60px;
     border-radius: 50%;
     background-color: rgba(187, 187, 187, 0.1);
     padding: 0;
