--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,6 +432,7 @@ ul {
     align-items: center;
     flex-direction: column;
     position: fixed;
+    padding: 10px;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
@@ -786,7 +787,7 @@ video {
 
 .connect4>ul {
     border: 1px solid #333;
-    background-color: rgba(7, 8, 88, 0.9);
+    background-color: rgba(11, 12, 100, 0.9);
     /* background-color: rgba(30, 30, 30, 0.9); */
     width: 455px;
     margin: 0 auto;
@@ -842,7 +843,7 @@ video {
 
 .pick_line>ul {
     border: 1px solid #333;
-    background-color: rgba(3, 4, 71, 0.9);
+    background-color: rgba(1, 2, 77, 0.9);
     width: 455px;
     margin: 0 auto;
     display:flex;
@@ -864,7 +865,59 @@ display:none;
 display: none;
 }
 
+.last_move {
+    border: solid 2px red ;
+}
 
+#spinner {
+    display:none;
+    margin: 50px auto;
+    width: 14vw;
+    height: 14vw;
+    max-width: 100px;
+    max-height: 100px;
+    border-radius: 50%;
+    /* background: #ccc; */
+    background: linear-gradient(to right, #ccc 10%, rgba(255, 255, 255, 0) 42%);
+    position: relative;
+    animation: load3 1s infinite linear;
+    transform: translateZ(0);
+  }
+  #spinner:before {
+    width: 50%;
+    height: 50%;
+    background: #ccc;
+    border-radius: 100% 0 0 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+  }
+  #spinner:after {
+    background: rgb(30,30,30);
+    width: 75%;
+    height: 75%;
+    border-radius: 50%;
+    content: '';
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+
+  @keyframes load3 {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  
 /* mobile View */
 
 @media only screen and (max-width: 600px) {
@@ -1025,30 +1078,18 @@ display: none;
         display: inline-table;
     }
     
-    .connect4>ul {
-        border: 1px solid #333;
-        background-color: rgba(7, 8, 88, 0.9);
-        /* background-color: rgba(30, 30, 30, 0.9); */
+    .connect4>ul { 
         width: 350px;
-        margin: 0 auto;
     }
     
     .connect4>ul>li {
-        width: 100%;
         height: 50px;
-        padding: 0;
-    }
-    
-    .connect4>ul>li>ul {
-        display: flex;
     }
     
     .connect4>ul>li>ul>li {
         width: 45px;
         height: 45px;
-        margin: 2.5px;
-        border-radius: 50%;
-        background-color: rgba(187, 187, 187,0.3);
+
         /* border-bottom: rgba(29, 29, 29, 0.15) solid 0.8px;
         border-top: rgba(29, 29, 29, 0.15) solid 0.8px;
         border-right: rgba(29, 29, 29, 0.15) solid 0.8px; */
@@ -1063,33 +1104,19 @@ display: none;
     }
     
     #player {
-        padding:0;
-        text-align: center;
         padding-top: 10vh;
         padding-bottom: 6vh;
-        margin: 0;
-        font-size: 36px;
+        font-size: 26px;
         color: #CCC;
         font-weight: 900;
     }
     
-    .pick_line {
-        align-items: center;
-    }
     
     .pick_line>ul {
-        border: 1px solid #333;
-        background-color: rgba(3, 4, 71, 0.9);
         width: 350px;
-        margin: 0 auto;
-        display:flex;
     }
     .pick_line>ul>li {
         width: 45px;
-        margin: 2.5px;
         height: 45px;
-        border-radius: 50%;
-        background-color: rgba(187, 187, 187, 0.1);
-        padding: 0;
     }
 }
