--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,7 +240,7 @@ h1 {
 /*zoom animation*/
 @keyframes zoom {
     from {
-        transform: scale(0);
+        transform: scale(0.2);
     }
 
     to {
@@ -386,37 +386,37 @@ ul {
 
 /*tetris blocks*/
 .tBlock {
-    background: linear-gradient(20deg, rgb(165, 1, 165),40%, rgb(255, 82, 246));
+    background: linear-gradient(20deg, rgb(165, 1, 165),30%, rgb(255, 82, 246));
     /* opacity: 0.9; */
 }
 
 .zBlock {
-    background: linear-gradient(20deg, rgb(165, 1, 1),40%, rgb(255, 0, 0));
+    background: linear-gradient(20deg, rgb(165, 1, 1),30%, rgb(255, 0, 0));
     /* opacity: 0.9; */
 }
 
 .iBlock {
-    background: linear-gradient(20deg, rgb(0, 131, 148),40%, rgb(0, 225, 255));
+    background: linear-gradient(20deg, rgb(0, 131, 148),30%, rgb(0, 225, 255));
     /* opacity: 0.9; */
 }
 
 .jBlock {
-    background: linear-gradient(20deg, rgb(29, 29, 167),40%, rgb(29, 29, 255));
+    background: linear-gradient(20deg, rgb(29, 29, 167),30%, rgb(29, 29, 255));
     /* opacity: 0.9; */
 }
 
 .lBlock {
-    background: linear-gradient(20deg, rgb(168, 109, 0),40%, rgb(255, 166, 0));
+    background: linear-gradient(20deg, rgb(168, 109, 0),30%, orange);
     /* opacity: 0.9; */
 }
 
 .oBlock {
-    background: linear-gradient(20deg, rgb(148, 148, 0),40%, rgb(255, 238, 0));
+    background: linear-gradient(20deg, rgb(148, 148, 0),30%, rgb(255, 238, 0));
     /* opacity: 0.9; */
 }
 
 .sBlock {
-    background: linear-gradient(20deg, rgb(126, 168, 41),40%, rgb(200, 255, 127));
+    background: linear-gradient(20deg, rgb(82, 122, 0),30%, rgb(145, 255, 0));
     /* opacity: 0.9; */
 }
 
@@ -1110,7 +1110,6 @@ display: none;
         color: #CCC;
         font-weight: 900;
     }
-    
     
     .pick_line>ul {
         width: 350px;
